--- a/.github/workflows/product-deploy.yaml
+++ b/.github/workflows/product-deploy.yaml
@@ -1,6 +1,7 @@
 name: Product Deploy
 
 on:
+  pull_request:
   push:
     branches:
       - main
@@ -20,10 +21,11 @@ jobs:
           chmod 600 "$HOME/.ssh/id_rsa"
       - name: Развёртывание приложения
         run: |
-          CONTENT_PATH="/web/sites/search.doka.guide/www/"
+          CONTENT_PATH="/web/sites/search.doka.guide/www"
+          PORT=8090
           ssh-keyscan -H doka.guide >> ~/.ssh/known_hosts
           export DOCKER_HOST="ssh://deploy@doka.guide"
           docker stop search
           docker image rm search
           docker build -t search .
-          docker run -dti --rm -p 8070:8070 --name search --mount type=bind,source="$(pwd)",target=/app/data search --search-content "$(echo $CONTENT_PATH)"search-content.json --stop-words "$(echo $CONTENT_PATH)"stop-search.json --dicts-dir "$(echo $CONTENT_PATH)"dics --app-port 8070
+          docker run -dti --rm -p "$PORT":"$PORT" --name search --mount type=bind,source="$(pwd)",target=/app/data search --search-content "$CONTENT_PATH"/search-content.json --stop-words "$CONTENT_PATH"/stop-search.json --dicts-dir "$CONTENT_PATH"/dics --app-port "$PORT"
