--- a/.github/workflows/product-deploy.yaml
+++ b/.github/workflows/product-deploy.yaml
@@ -23,7 +23,7 @@ jobs:
         run: |
           CONTENT_PATH="/web/sites/search.doka.guide/www"
           PORT=8070
-          ssh-keyscan -H doka.guide >> ~/.ssh/known_hosts
+          ssh-keyscan -H api.doka.guide >> ~/.ssh/known_hosts
           export DOCKER_HOST="ssh://deploy@api.doka.guide"
           docker stop search
           docker image rm search
